ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: speakup-ingress
    annotations:
        ingress.kubernetes.io/rewrite-target: /
spec:
    backend:
        serviceName: default-http-backend
        servicePort: 80
    rules:
    - http:
        paths:
        - path: /
          backend:
              serviceName: web-service
              servicePort: 80
